kong-ingress-controller/websocket-server-with-request-transformer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-svc
spec:
  type: NodePort
  selector:
    app: websocketd
  ports:
  - port: 9998
    targetPort: 9998
    nodePort: 30007
